dfir_datalog_core/src/snapshots/hydroflow_datalog_core__tests__aggregations_fold_keyed_expr@surface_graph.snap
---
source: dfir_datalog_core/src/lib.rs
expression: flat_graph_ref.surface_syntax_string()
---
2v1 = unique :: < 'tick > ();
5v1 = unique :: < 'tick > ();
7v1 = source_stream (ints);
8v1 = for_each (| v | result . send (v) . unwrap ());
9v1 = map (| row : (_ , _ ,) | ((row . 0 % 2 ,) , (row . 1 ,)));
10v1 = fold_keyed :: < 'tick , (_ ,) , (Option < _ > ,) > (| | (None ,) , | old : & mut (Option < _ > ,) , val : (_ ,) | { old . 0 = if let Some (prev) = old . 0 . take () { Some (prev + val . 0) } else { Some (val . 0) } ; });
11v1 = map (| (g , a) : ((_ ,) , _) | (g . 0 , a . 0 . unwrap () ,));

7v1 -> 2v1;
11v1 -> 5v1;
5v1 -> 8v1;
10v1 -> 11v1;
9v1 -> 10v1;
2v1 -> 9v1;

