dfir_datalog_core/src/snapshots/hydroflow_datalog_core__tests__expr_predicate@surface_graph.snap
---
source: dfir_datalog_core/src/lib.rs
expression: flat_graph_ref.surface_syntax_string()
---
2v1 = unique :: < 'tick > ();
3v1 = tee ();
4v1 = union ();
5v1 = unique :: < 'tick > ();
7v1 = source_stream (ints);
8v1 = for_each (| v | result . send (v) . unwrap ());
9v1 = filter (| row : & (_ ,) | row . 0 == 0);
10v1 = map (| row : (_ ,) | ((1 ,) , ()));
11v1 = map (| (g , a) : ((_ ,) , _) | (g . 0 ,));
12v1 = filter (| row : & (_ ,) | row . 0 != 0);
13v1 = map (| row : (_ ,) | ((2 ,) , ()));
14v1 = map (| (g , a) : ((_ ,) , _) | (g . 0 ,));
15v1 = filter (| row : & (_ ,) | row . 0 - 1 == 0);
16v1 = map (| row : (_ ,) | ((3 ,) , ()));
17v1 = map (| (g , a) : ((_ ,) , _) | (g . 0 ,));
18v1 = filter (| row : & (_ ,) | row . 0 - 1 == 1 - 1);
19v1 = map (| row : (_ ,) | ((4 ,) , ()));
20v1 = map (| (g , a) : ((_ ,) , _) | (g . 0 ,));

7v1 -> 2v1;
2v1 -> 3v1;
4v1 -> 5v1;
5v1 -> 8v1;
3v1 -> 9v1;
11v1 -> 4v1;
10v1 -> 11v1;
9v1 -> 10v1;
3v1 -> 12v1;
14v1 -> 4v1;
13v1 -> 14v1;
12v1 -> 13v1;
3v1 -> 15v1;
17v1 -> 4v1;
16v1 -> 17v1;
15v1 -> 16v1;
3v1 -> 18v1;
20v1 -> 4v1;
19v1 -> 20v1;
18v1 -> 19v1;

