dfir_datalog_core/src/snapshots/hydroflow_datalog_core__tests__join_with_other@surface_graph.snap
---
source: dfir_datalog_core/src/lib.rs
expression: flat_graph_ref.surface_syntax_string()
---
2v1 = unique :: < 'tick > ();
5v1 = unique :: < 'tick > ();
8v1 = unique :: < 'tick > ();
10v1 = source_stream (in1);
11v1 = source_stream (in2);
12v1 = for_each (| v | out . send (v) . unwrap ());
13v1 = join :: < 'tick , 'tick , hydroflow :: compiled :: pull :: HalfMultisetJoinState > ();
14v1 = map (| kv : ((_ , _ ,) , (() , ())) | (kv . 0 . 0 , kv . 0 . 1 ,));
15v1 = map (| _v : (_ , _ ,) | ((_v . 0 , _v . 1 ,) , ()));
16v1 = map (| _v : (_ , _ ,) | ((_v . 1 , _v . 0 ,) , ()));
17v1 = map (| row : (_ , _ ,) | ((row . 0 , row . 1 ,) , ()));
18v1 = map (| (g , a) : ((_ , _ ,) , _) | (g . 0 , g . 1 ,));

10v1 -> 2v1;
11v1 -> 5v1;
18v1 -> 8v1;
8v1 -> 12v1;
13v1 -> 14v1;
15v1 -> 13v1;
2v1 -> 15v1;
16v1 -> 13v1;
5v1 -> 16v1;
17v1 -> 18v1;
14v1 -> 17v1;

