dfir_datalog_core/src/snapshots/hydroflow_datalog_core__tests__join_with_self@surface_graph.snap
---
source: dfir_datalog_core/src/lib.rs
expression: flat_graph_ref.surface_syntax_string()
---
2v1 = unique :: < 'tick > ();
3v1 = tee ();
5v1 = unique :: < 'tick > ();
7v1 = source_stream (input);
8v1 = for_each (| v | out . send (v) . unwrap ());
9v1 = join :: < 'tick , 'tick , hydroflow :: compiled :: pull :: HalfMultisetJoinState > ();
10v1 = map (| kv : ((_ , _ ,) , (() , ())) | (kv . 0 . 0 , kv . 0 . 1 ,));
11v1 = map (| _v : (_ , _ ,) | ((_v . 0 , _v . 1 ,) , ()));
12v1 = map (| _v : (_ , _ ,) | ((_v . 1 , _v . 0 ,) , ()));
13v1 = map (| row : (_ , _ ,) | ((row . 0 , row . 1 ,) , ()));
14v1 = map (| (g , a) : ((_ , _ ,) , _) | (g . 0 , g . 1 ,));

7v1 -> 2v1;
2v1 -> 3v1;
14v1 -> 5v1;
5v1 -> 8v1;
9v1 -> 10v1;
11v1 -> 9v1;
3v1 -> 11v1;
12v1 -> 9v1;
3v1 -> 12v1;
13v1 -> 14v1;
10v1 -> 13v1;

