dfir_datalog_core/src/snapshots/hydroflow_datalog_core__tests__local_constraints@surface_graph-2.snap
---
source: dfir_datalog_core/src/lib.rs
expression: flat_graph_ref.surface_syntax_string()
---
2v1 = unique :: < 'tick > ();
5v1 = unique :: < 'tick > ();
7v1 = source_stream (input);
8v1 = for_each (| v | out . send (v) . unwrap ());
9v1 = filter (| row : & (_ , _ , _ , _ ,) | row . 0 == row . 1 && row . 2 == row . 3);
10v1 = map (| row : (_ , _ , _ , _ ,) | ((row . 0 . clone () , row . 0 , row . 2 . clone () , row . 2 ,) , ()));
11v1 = map (| (g , a) : ((_ , _ , _ , _ ,) , _) | (g . 0 , g . 1 , g . 2 , g . 3 ,));

7v1 -> 2v1;
11v1 -> 5v1;
5v1 -> 8v1;
2v1 -> 9v1;
10v1 -> 11v1;
9v1 -> 10v1;

